Fix static files config (STATICFILES_DIRS)

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,7 +20,7 @@
     <img src="{% static 'images/profile.jpg' %}" alt="Sagar Dhok" class="avatar">
 
     <h1>Sagar Dhok</h1>
-    <p class="subtitle">Backend Developer • Python • Django • REST APIs</p>
+    <p class="subtitle">Backend Developer </p>
 
     <div class="hero-actions">
         <a href="{% static 'resume/resume.pdf' %}" class="btn primary" download>
